# fp-25

./: .gitignore  .ocamlformat  .ocamlintit  .yaspellerrc  README.md  Task.md  dune-project  lab1.opam  lab2.opam  lab3.opam  lab4_mlac.opam  remove_comments.sh
.cursor/plans/: audio_encoder_decoder_implementation_3d4d5b58.plan.md  audio_model_implementation_(updated)_d5eb127c.plan.md  encoding_decoding_io_with_huffman_4a7bcdba.plan.md
.github/: ocaml.yml
.github/workflows/: main.yml  ocaml.yml
_build/: log
lib/: Generator.ml  Generator.mli  Input.ml  Input.mli  Interpolation.ml  Interpolation.mli  Interpolator.ml  Interpolator.mli  Output.ml  Output.mli  Pipeline.ml  Pipeline.mli  Stream.ml  Stream.mli  dune  rb_set.ml  rb_set.mli  rb_set_impl.ml  task1.ml  task2.ml
lib/cli/: args.ml  args.mli  dune
lib/codec/: audiomodel.ml  audiomodel.mli  decoder.ml  decoder.mli  dune  encoder.ml  encoder.mli  serialization.ml  serialization.mli
lib/codec/utilities/: audio_analysis.ml  audio_analysis.mli  compression.ml  compression.mli  dsp.ml  dsp.mli  dune  fft.ml  fft.mli  quantization.ml  quantization.mli  test_dsp.ml
lib/io/: dune  reader.ml  reader.mli  writer.ml  writer.mli
lib/wav/: dune  parser.ml  parser.mli  writer.ml  writer.mli
python/: task1.py  task2.py
test/: dune  golden_test.ml  test_api_leak.ml  test_golden.dune  test_golden.ml  test_lab1.ml  test_lab2.ml  test_lab3.ml  test_lab3_pbt.ml  test_pbt.dune  test_pbt.ml  test_unit.dune  test_unit.ml
test/codec/: bench_dft.ml  bench_encoder_decoder.ml  bench_mdct.ml  convert_wav.ml  dune  dune-profile  profile_decoder.ml  profile_encoder.ml  profile_full.ml  profile_with_ocamlcp.sh  test_audiomodel.ml  test_compression_size.ml  test_e2e_simple.ml  test_e2e_wav_compression.ml  test_encoder_decoder.ml  test_golden_wav.ml  test_mdct_comparison.ml  test_quantization_pipeline.ml  test_serialization_simple.ml
test/codec/utilities/: dune  test_compression.ml  test_dsp.ml  test_fft.ml  test_quantization.ml
test/golden/: test1_expected.txt  test1_input.txt  test2_expected.txt  test2_input.txt  test3_expected.txt  test3_input.txt
test/io/: dune  test_reader_writer.ml
test/wav/: dune  test_wav.ml
test_output/: test_sample_high_quality.audc  test_sample_low_quality.audc  test_sample_medium_quality.audc
