(lang dune 3.20)

(name lab4_mlac)

(generate_opam_files true)

(package
 (name lab4_mlac)
 (synopsis "Lab 4: Audio Codec implementation")
 (description "Audio codec implementation")
 (maintainers "vladimir melnikov")
 (authors "vladimir melnikov")
 (license "apache-2.0")
 (homepage "https://github.com/Vovanm88/fp-25")
 (bug_reports "https://github.com/Vovanm88/fp-25/issues")
 (depends
  ocaml
  (ocamlformat :dev)))
